--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         <button id="password-submit">확인</button>
     </div>
     <div id="content" style="display:none;">
-        <a href="https://moveuniversity.kr/" target="_blank">
+        <a href="https://moveuniversity.kr/admin" target="_blank">
             <img src="images/company_logo.png" alt="Company Logo" id="company-logo-content">
+        </a>
+        <a href="https://docs.google.com/document/d/1eMjBpuH6QBuMjiuPJc327GKHZ9em00YDL9ZBzBjDLhs/edit#heading=h.5o8t8i91o6lu" target="_blank">
+            <img src="images/support link.png" alt="supprot link" id="support-link">
         </a>
         <h1>지역별 기사 정보</h1>
         <div id="map-container">
